parser/tests/bad/stmt03.st
% 'exit' statement can only appear in 'for' and 'loop' statements

begin
  var i := 1
  exit
end
